# opendatahub-tests

./: final_1407_patch_without_perf.patch  final_opendata1307.patch  py.patch  pya.patch  pyproject.toml  report.html
tests/model_serving/model_runtime/vllm/cpu/ibm_power_z/: 1007_patch.patch  conftest.py  constant.py  test_deepseek_r1_distill_llama_8b.py  test_elyza-japanese-llama-2-7b-instruct.py  test_falcon3_7b_instruct.py  test_granite_3_1_2b_instruct.py  test_granite_3_1_8b_instruct.py  test_granite_3_3_8b_instruct.py  test_granite_3b_code_instruct_2k.py  test_llama_3_2_1b_instruct.py  test_llama_3_2_3b_instruct.py  test_meta_llama_3_1_8b.py  test_ministral_3b_instruct.py  test_mistral_7b_instruct.py  test_phi_3_mini_4k_instruct.py  test_phi_4.py  test_tinyllama_1B_chat_v1.py  utils.py
utilities/: constants.py
