[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"
extend-exclude = ["utilities/manifests"]

[tool.ruff.lint]
external = ["E501", "FCN001", "UFN001"]

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__", "utilities/manifests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.uv]
override-dependencies = [
    "marshmallow>=4.0",
]

# Add IBM Power wheels repository for ppc64le architecture
[[tool.uv.index]]
name = "ibm-power-wheels"
url = "https://wheels.developerfirst.ibm.com/ppc64le/linux/+simple/"
explicit = true

[tool.uv.sources]
pyarrow = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]
numpy = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]
scipy = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]
scikit-learn = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]
grpcio = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]
pynacl = [
    { index = "ibm-power-wheels", marker = "platform_machine == 'ppc64le'" },
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.pyrefly]
preset = "legacy"  # Start mypy-compatible, tighten later
python-version = "3.14"
ignore-missing-imports = ["*"]  # Match mypy ignore_missing_imports
permissive-ignores = true  # Respect mypy ignore comments during transition

# Exclude patterns matching pre-commit config
project-excludes = [
    "**/docs/**",
    "**/*test*.py",  # Tests have 700+ errors (fixtures, mocks, dynamic types)
    "**/utilities/manifests/**",
    "**/utilities/plugins/tgis_grpc*",  # Includes tgis_grpc/ dir and tgis_grpc_plugin.py
    "**/__pycache__/**",
    "**/.mypy_cache/**",
    "**/.ruff_cache/**",
    "**/.venv/**",
    "**/.tox/**",
]

[tool.pyrefly.errors]
# Start permissive to match mypy behavior
missing-import = false  # Covered by ignore-missing-imports

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.3",
    "pre-commit>=4.3.0",
    "pyrefly>=1.0",
]

[project]
requires-python = "==3.14.*"
name = "opendatahub-tests"
version = "0.1.0"
description = "Tests repository for Open Data Hub (ODH)"
authors = []
license = {text = "Apache License (2.0)"}
readme = "README.md"
keywords = ["Openshift", "RHOAI", "ODH"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
    "bcrypt>=4.0.0",
    "cryptography>=43.0.0",
    "ipython>=8.18.1",
    "model-registry[signing]>=0.2.13",
    "openshift-python-utilities>=5.0.71",
    "pytest-dependency>=0.6.0",
    "pytest-progress",
    "structlog>=24.1.0",
    "pyyaml",
    "pyarrow>=23.0.0",
    "tenacity",
    "types-requests>=2.32.0.20241016",
    "requests",
    "pytest-asyncio",
    "syrupy",
    "protobuf",
    "grpcio>=1.60.0,<1.81.0",
    "grpcio-reflection>=1.60.0,<1.81.0", 
    "grpcio-reflection",
    "portforward>=0.7.1",
    "pynacl>=1.5.0",
    "pytest-testconfig>=0.2.0",
    "pygithub>=2.5.0",
    "timeout-sampler>=1.0.6",
    "shortuuid>=1.0.13",
    "jira>=3.8.0",
    "openshift-python-wrapper>=11.0.132",
    "semver>=3.0.4",
    "sqlalchemy>=2.0.40",
    "pytest-order>=1.3.0",
    "marshmallow>=4.0",
    "pytest-html>=4.1.1",
    "fire",
    "ogx_client==1.1.3",
    "pytest-xdist==3.8.0",
    "dictdiffer>=0.9.0",
    "pytest>=9.0.0",
    "huggingface-hub>=1.2.3",
    "openai>=2.36",
    "ragas>=0.4",
    "numpy>=2.1.0,<2.5.0",
    "scipy>=1.13.0,<1.18.0",
    "langchain-community<0.4.2",
    "ipykernel>=7.3.0",
    "boto3>=1.43.33",
]

[project.urls]
homepage = "https://github.com/opendatahub-io/opendatahub-tests"
